refactor(sql): move select projection IR into connector
Move the Selects aggregate and its pure transformations into the
connector-owned IR while preserving its Lombok value and builder API. Keep
dialect-aware final projection rendering in the backend transformer and cover
the moved aggregate with focused tests.

Co-authored-by: Codex GPT-5.6-sol <codex@openai.com>